--- a/home/wiki/App/Full-text_search/Lucene/Search_indexes/Building.html
+++ b/home/wiki/App/Full-text_search/Lucene/Search_indexes/Building.html
@@ -56,7 +56,7 @@
     </h2>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Special:XowaSearchBuilder.html" id="xolnki_3" title="Special:XowaSearchBuilder">Special:XowaSearchBuilder</a>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaSearchBuilder.html" id="xolnki_3" title="Special:XowaSearchBuilder" class="xowa-visited">Special:XowaSearchBuilder</a>
       </li>
       <li>
         Choose the domain for your wiki. For example, <code>en.wiktionary.org</code>
