--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -1008,7 +1008,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_13" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_13" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -1196,7 +1196,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_19" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_19" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -1923,7 +1923,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Fix regex pattern for matching end of string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -3989,7 +3989,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_54" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_54" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -4120,7 +4120,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_56" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_56" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
       </dd>
     </dl>
     <h2>
@@ -4547,7 +4547,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_61" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_61" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -4986,7 +4986,7 @@
         Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/どう" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/를" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
-        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_67" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_67" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </li>
       <li>
         Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions" rel="nofollow" class="external free">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
