--- a/home/wiki/Change_log/v3.10.4.1.html
+++ b/home/wiki/Change_log/v3.10.4.1.html
@@ -121,7 +121,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_4" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_4" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
