--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_windows_64_v4.5.15.1709.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_windows_64_v4.5.19.1801.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_windows_v4.5.15.1709.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_windows_v4.5.19.1801.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,7 +39,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_windows_64_v4.5.15.1709_w_jre.7z" rel="nofollow" class="external text">Windows with Java (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_windows_64_v4.5.19.1801_w_jre.7z" rel="nofollow" class="external text">Windows with Java (64-bit)</a>
       </li>
     </ul>
     <h2>
@@ -47,10 +47,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_linux_64_v4.5.15.1709.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_linux_64_v4.5.19.1801.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_linux_v4.5.15.1709.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_linux_v4.5.19.1801.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -58,10 +58,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_macosx_64_v4.5.15.1709.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_macosx_64_v4.5.19.1801.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_macosx_v4.5.15.1709.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_macosx_v4.5.19.1801.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_arm_v4.5.15.1709.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_arm_v4.5.19.1801.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.15.1709/xowa_app_android_v4.5.15.1709.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_android_v4.5.19.1801.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -85,7 +85,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v4.5.15.1709.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v4.5.19.1801.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -97,14 +97,11 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v4.5.15.1709_.282017-09-15.29">v4.5.15.1709 (2017-09-15)</span>
-    </h2>
-    <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
-    </h3>
+    </h2>
     <ul>
       <li>
-        Package: Publish 2017-05 English wikis.
+        Package: Publish 2017-12 English Wikipedia.
       </li>
     </ul>
     <dl>
@@ -114,7 +111,7 @@
     </dl>
     <ul>
       <li>
-        Package: Publish 2017-05 German wikis.
+        Package: Publish 2017-12 German Wikipedia.
       </li>
     </ul>
     <dl>
@@ -122,235 +119,123 @@
         <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
-    <ul>
-      <li>
-        Package: Publish 2017-05 French wikis.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_6" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Package: Publish 2017-06 English Wikipedia.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_7" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
-      </dd>
-    </dl>
     <h2>
       <span class="mw-headline" id="PC">PC</span>
     </h2>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Wikibase: Fix script error "=Module:Authority control:272 attempt to call nil" on many en.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add getBestStatements.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Apoptosis" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Apoptosis</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Wikibase: Fix script error "MWServer.lua:59 vm error: java.lang.NullPointerException" on several dozen en.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add getEntityUrl.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Wikipedia:Persondata" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:Persondata</a> <a href="https://en.wikipedia.org/wiki/Wikipedia:ChemSpider" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:ChemSpider</a> <a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Women_artists/Redlinks_from_Wikidata" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Women_artists/Redlinks_from_Wikidata</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        ParserFunctions: Fix script error 'bad argument #2 to 'formatDate' (not a valid timestamp)" on several dozen en.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Parse relative month.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: "01-12-2001 -1 month" -&gt; 2001-11-01 x&gt; "Invalid month: 12".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Portal:Current_events/December_2001" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Current_events/December_2001</a>
+      </dd>
+    </dl>
     <p>
       <b>minor</b>
     </p>
     <ul>
       <li>
-        Scribunto: Fix script error '=Module:ISBN:68 attempt to call nil' on many pl.w pages.
+        Scribunto: Fix script error 'NullPointerException" on a few en.w pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add addWarning to mw.lua.
+        <span style='font-variant:small-caps'>Example</span>: [1, 2, 3, 5] -&gt; [1, 2, 3, null, 5].
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Example</span>: /xowa/bin/any/xowa/xtns/Scribunto/engines/LuaCommon/lualib/mw.lua.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://pl.wikipedia.org/wiki/Opus_Dei" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Opus_Dei</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Abziri" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Abziri</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Scribunto: Fix script error 'MWServer.lua:59 vm error: gplx.Err: index is out of bounds' on many es.w pages.
+        Luaj: Fix script error '=Module:Television ratings graph:312 attempt to index ? (a nil value)" on a dozen en.w pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Upgrade to latest mw.lua.
+        <span style='font-variant:small-caps'>Resolved by</span>: Parse tonumber('-') as nil not 0.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Example</span>: /xowa/bin/any/xowa/xtns/Scribunto/engines/LuaCommon/lualib/mw.lua.
+        <span style='font-variant:small-caps'>Example</span>: tonumber('-') -&gt; nil x&gt; 0.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://es.wikipedia.org/wiki/Ladri_di_biciclette" rel="nofollow" class="external free">https://es.wikipedia.org/wiki/Ladri_di_biciclette</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/List_of_Twin_Peaks_episodes" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/List_of_Twin_Peaks_episodes</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Scribunto: Do not call preprocess twice.
+        JsonConfig: Fix script error '=Module:Data:8 attempt to index ? (a nil value)' on a dozen de.w pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Evaluate template-args when expanding template, not separately afterwards.
+        <span style='font-variant:small-caps'>Resolved by</span>: Add JsonConfig support.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: home/wiki/Diagnostics/Scribunto/LuaCommon
+        <span style='font-variant:small-caps'>Example</span>: /xowa/bin/any/xowa/xtns/JsonConfig.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Reicholzheim" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Reicholzheim</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Scribunto: Fix '=Module:Location map:353 Malformed coordinates value' on a few dozen en.w Location pages.
+        Parser: Fix 1 page not loading b/c of invalid file link.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Return null if integer key is not found.
+        <span style='font-variant:small-caps'>Resolved by</span>: Parse image.link args with with xwiki, namespace, but no title.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Example</span>: if {{coord|3=region:CA-QC|display=inline,title}} then [2] -&gt; null.
+        <span style='font-variant:small-caps'>Example</span>: [[File:A.png|link=en:User_talk:|abc]].
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Sainte-Catherine,_Quebec" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Sainte-Catherine,_Quebec</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Wikipedia:Teahouse/The_menu" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:Teahouse/The_menu</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Wikibase: Add "id" to wikibase data table.
+        Embeddable: Append categories to HTML. {requested by Rüdiger Gleim}
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://es.wikipedia.org/wiki/Premio_Hugo_a_la_mejor_novela" rel="nofollow" class="external free">https://es.wikipedia.org/wiki/Premio_Hugo_a_la_mejor_novela</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Luaj: Fix script error '=Module:Authority control:66 vm error: java.lang.ArrayIndexOutOfBoundsException" on some commons pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Message</span>: <code>Script error: =Module:Authority control:66 vm error: java.lang.ArrayIndexOutOfBoundsException: 0</code>
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Check for zero length arrays in string:match.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://commons.wikimedia.org/wiki/File:Nouveauxvoyagese-p378.png" rel="nofollow" class="external free">http://commons.wikimedia.org/wiki/File:Nouveauxvoyagese-p378.png</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Import: Fix online import not working on Mac OS X. {detected by andyring}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: /xowa/user/anonymous/app/cfg/os.macosx_64.gfs
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Html: Add customizable footer. {requested by Ope30}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: home/wiki/Special:XowaCfg?grp=xowa.html.page
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Html: Add option to hide xowa-alt in html db.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://simple.wikipedia.org/wiki/Saturn_(planet)" rel="nofollow" class="external free">http://simple.wikipedia.org/wiki/Saturn_(planet)</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Http_server: Fix full-text search not working. {detected by ktry}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://localhost:8080/home/wiki/Special:XowaSearch?search=luaj&amp;fulltext=y" rel="nofollow" class="external free">http://localhost:8080/home/wiki/Special:XowaSearch?search=luaj&amp;fulltext=y</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Http_server: Do not override command-line port with config port. {detected by ktry}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: --http_server_port 80.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Http_server: Add special_pages_safelist. {requested by ktry}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: --http_server.special_pages_safelist Random|AllPages|XowaSearch.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Http_server: Do not fail if Search has invalid title characters. {detected by ktry}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: Special:XowaSearch?search=mod_date:[20170101 TO 20170131]&amp;fulltext=y.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        DownloadCentral: Increase notification show time from 3 seconds to 30 seconds. {requested by William}
-      </li>
-    </ul>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        ParserFunctions: Do not fail when calling ifexist with invalid title in Media namespace.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://es.wikipedia.org/wiki/Elecciones_presidenciales_de_Venezuela_de_1998" rel="nofollow" class="external free">https://es.wikipedia.org/wiki/Elecciones_presidenciales_de_Venezuela_de_1998</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Hzip: Compress and decompress recent xowa_alt_text.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://es.wikipedia.org/wiki/Biome" rel="nofollow" class="external free">https://es.wikipedia.org/wiki/Biome</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Wikibase: Add dinwiki and hiwikiversity.
-      </li>
-    </ul>
-    <p>
-      <b>doc</b>
-    </p>
-    <ul>
-      <li>
-        Doc: Provide more instructions on using XOWA as an HTTP server on linux. {detected by ktry}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: readme.txt
-      </dd>
-    </dl>
   
     </div>
   </div>
