--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -74,23 +74,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v4.5.15.1709 features the following
+      v4.5.19.1801 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.
+        (Wiki) Publish 2017-12 English Wikipedia and 2017-12 German Wikipedia
       </li>
       <li>
-        (PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia
-      </li>
-      <li>
-        (PC) Fix online import not working on Mac OS X
-      </li>
-      <li>
-        (PC) Fix full-text search on http_server
-      </li>
-      <li>
-        (PC) Add customizable footer
+        (PC) Fix multiple script errors due to Wikibase, JsonConfig, Luaj, and ParserFunctions
       </li>
     </ul>
     <p>
@@ -146,7 +137,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -154,16 +145,16 @@
         After the setup completes, you can visit these pages: 
         <dl>
           <dd>
-            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Gothic_architecture.html" id="xolnki_7" title="Simple.wikipedia.org:Gothic architecture">Simple.wikipedia.org:Gothic architecture</a>
+            <a href="https://simple.wikipedia.org/wiki/Gothic_architecture.html" id="xolnki_7" title="Gothic architecture">Gothic architecture</a>
           </dd>
           <dd>
-            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Saturn_(planet).html" id="xolnki_8" title="Simple.wikipedia.org:Saturn (planet)">Simple.wikipedia.org:Saturn (planet)</a>
+            <a href="https://simple.wikipedia.org/wiki/Saturn_(planet).html" id="xolnki_8" title="Saturn (planet)">Saturn (planet)</a>
           </dd>
           <dd>
-            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Chess.html" id="xolnki_9" title="Simple.wikipedia.org:Chess">Simple.wikipedia.org:Chess</a>
+            <a href="https://simple.wikipedia.org/wiki/Chess.html" id="xolnki_9" title="Chess">Chess</a>
           </dd>
           <dd>
-            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:World_History.html" id="xolnki_10" title="Simple.wikipedia.org:World History">Simple.wikipedia.org:World History</a>
+            <a href="https://simple.wikipedia.org/wiki/World_History.html" id="xolnki_10" title="World History">World History</a>
           </dd>
         </dl>
       </dd>
@@ -178,7 +169,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -186,7 +177,7 @@
     </h5>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
       </li>
     </ul>
     <h5>
@@ -382,7 +373,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -390,7 +381,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_40" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_40" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -406,7 +397,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_42" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_42" title="Dashboard/Wiki maintenance" class="xowa-visited">Wiki Maintenance</a>
         </td>
         <td>
           Update your wikis if they are outdated
@@ -422,7 +413,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_44" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_44" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
