--- a/home/wiki/Blog.html
+++ b/home/wiki/Blog.html
@@ -21,44 +21,27 @@
       <p>
         <span style='font-size:15px;font-weight:bold;'>Blog links</span><br>
         <br>
+        2018<br>
+      </p>
+      <ul>
+        <li>
+          <b>2018-01</b>
+        </li>
+      </ul>
+      <p>
         2017<br>
       </p>
       <ul>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-06.html" id="xolnki_2" title="Blog/2017-06" class="xowa-visited">2017-09</a>
+          <a href="http://xowa.org/home/wiki/Blog/2017-09.html" id="xolnki_3" title="Blog/2017-09" class="xowa-visited">2017-09</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-06.html" id="xolnki_3" title="Blog/2017-06" class="xowa-visited">2017-06</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-04.html" id="xolnki_4" title="Blog/2017-04">2017-04</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-03.html" id="xolnki_5" title="Blog/2017-03">2017-03</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-02.html" id="xolnki_6" title="Blog/2017-02">2017-02</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-01.html" id="xolnki_7" title="Blog/2017-01">2017-01</a>
+          <a href="http://xowa.org/home/wiki/Blog/2017-06.html" id="xolnki_4" title="Blog/2017-06" class="xowa-visited">2017-06</a>
         </li>
       </ul>
       <p>
-        2016<br>
-      </p>
-      <ul>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-12.html" id="xolnki_8" title="Blog/2016-12">2016-12</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-11.html" id="xolnki_9" title="Blog/2016-11">2016-11</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-10.html" id="xolnki_10" title="Blog/2016-10">2016-10</a>
-        </li>
-      </ul>
-      <p>
-        <a href="http://xowa.org/home/wiki/Blog/Archives.html" id="xolnki_11" title="Blog/Archives" class="xowa-visited">Archives</a>
+        <br>
+        <a href="http://xowa.org/home/wiki/Blog/Archives.html" id="xolnki_5" title="Blog/Archives" class="xowa-visited">Archives</a>
       </p>
     </div>
     <div id="toc" class="toc">
@@ -69,99 +52,69 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#Release:_v4.5.15.1709_.282017-09-17_21:00_Sun.29"><span class="tocnumber">1</span> <span class="toctext">Release: v4.5.15.1709 (2017-09-17 21:00 Sun)</span></a> 
+          <a href="#Release:_v4.5.19.1801_.282018-01-05_23:00_Fri.29"><span class="tocnumber">1</span> <span class="toctext">Release: v4.5.19.1801 (2018-01-05 23:00 Fri)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#.28Wiki.29_Publish_2017-08_Polish_wikis_and_2017-09_Spanish_wikis_with_full-text_search._Also.2C_2017-08.2C_2017-07_English_Wikipedia.2C_and_2017-07_German_Wikipedia."><span class="tocnumber">1.1</span> <span class="toctext">(Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.</span></a>
+              <a href="#.28Wiki.29_Publish_2017-12_English_Wikipedia_and_2017-12_German_Wikipedia"><span class="tocnumber">1.1</span> <span class="toctext">(Wiki) Publish 2017-12 English Wikipedia and 2017-12 German Wikipedia</span></a>
             </li>
             <li class="toclevel-2 tocsection-3">
-              <a href="#.28PC.29_Fix_parser_issues_including_.22gplx.Err:_index_is_out_of_bounds.22_in_Spanish_Wikipedia_and_.22Module:Location_map:353_Malformed_coordinates_value.22_in_English_Wikipedia"><span class="tocnumber">1.2</span> <span class="toctext">(PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia</span></a>
+              <a href="#.28PC.29_Fix_multiple_script_errors_due_to_Wikibase.2C_JsonConfig.2C_Luaj.2C_and_ParserFunctions"><span class="tocnumber">1.2</span> <span class="toctext">(PC) Fix multiple script errors due to Wikibase, JsonConfig, Luaj, and ParserFunctions</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#.28PC.29_Fix_online_import_not_working_on_Mac_OS_X"><span class="tocnumber">1.3</span> <span class="toctext">(PC) Fix online import not working on Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-5">
-              <a href="#.28PC.29_Fix_full-text_search_on_http_server"><span class="tocnumber">1.4</span> <span class="toctext">(PC) Fix full-text search on http_server</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#.28PC.29_Add_customizable_footer"><span class="tocnumber">1.5</span> <span class="toctext">(PC) Add customizable footer</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#Next_release"><span class="tocnumber">1.6</span> <span class="toctext">Next release</span></a>
+              <a href="#Next_release"><span class="tocnumber">1.3</span> <span class="toctext">Next release</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Release:_v4.5.15.1709_.282017-09-17_21:00_Sun.29">Release: v4.5.15.1709 (2017-09-17 21:00 Sun)</span>
+      <span class="mw-headline" id="Release:_v4.5.19.1801_.282018-01-05_23:00_Fri.29">Release: v4.5.19.1801 (2018-01-05 23:00 Fri)</span>
     </h2>
     <p>
-      The PC version is a minor release. It fixes parsing issues for Spanish wikis.
+      The PC version is a minor release. It fixes parsing issues for 2017-12 English Wikipedia and 2017-12 German Wikipedia.
     </p>
     <p>
-      The PC version is a trivial release. It updates the list of wikis for Download Central.
+      The Android version is a trivial release. It updates the list of wikis for Download Central.
     </p>
     <h3>
-      <span class="mw-headline" id=".28Wiki.29_Publish_2017-08_Polish_wikis_and_2017-09_Spanish_wikis_with_full-text_search._Also.2C_2017-08.2C_2017-07_English_Wikipedia.2C_and_2017-07_German_Wikipedia.">(Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.</span>
+      <span class="mw-headline" id=".28Wiki.29_Publish_2017-12_English_Wikipedia_and_2017-12_German_Wikipedia">(Wiki) Publish 2017-12 English Wikipedia and 2017-12 German Wikipedia</span>
     </h3>
     <p>
-      These wikis have been published over the course of the past several weeks. You can get them from Download Central or see the following links:
+      It's been slow recently, as only the above two wikis were published. You can get them from Download Central or see the following links:
     </p>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_12" title="Wiki setup/Polish wikis">Wiki_setup/Polish_wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_13" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_14" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_15" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_7" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id=".28PC.29_Fix_parser_issues_including_.22gplx.Err:_index_is_out_of_bounds.22_in_Spanish_Wikipedia_and_.22Module:Location_map:353_Malformed_coordinates_value.22_in_English_Wikipedia">(PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia</span>
+      <span class="mw-headline" id=".28PC.29_Fix_multiple_script_errors_due_to_Wikibase.2C_JsonConfig.2C_Luaj.2C_and_ParserFunctions">(PC) Fix multiple script errors due to Wikibase, JsonConfig, Luaj, and ParserFunctions</span>
     </h3>
     <p>
-      There were two notable parser fixes:
+      There were a handful of minor parsing issues with English and German Wikipedia. In brief:
     </p>
     <ul>
       <li>
-        Several dozen film pages in Spanish Wikipedia would have a script error with "gplx.Err: index is out of bounds". This was due to some changes on the Wikimedia side to mw.lua
+        Wikibase: Add support for getBestStatements and getEntityUrl
       </li>
       <li>
-        Several dozen geography pages in English Wikipedia would have a script error with Module:Location map:353 Malformed coordinates value. This was due to some faulty logic in XOWA which would still return back a value even when an index didn't exist (EX: {{#invoke:Mod|3=abc}}) and args[2] would return back args[3])
+        JsonConfig: Add support for JsonConfig
+      </li>
+      <li>
+        Luaj: Parse '-' as nil not 0
+      </li>
+      <li>
+        ParserFunctions: Parse relative months like '1-12-2001 -1 month'
       </li>
     </ul>
-    <p>
-      Both of these are fixed in this release
-    </p>
-    <h3>
-      <span class="mw-headline" id=".28PC.29_Fix_online_import_not_working_on_Mac_OS_X">(PC) Fix online import not working on Mac OS X</span>
-    </h3>
-    <p>
-      This was reported separately by a user. It appears that sometime during the past few months, the online import failed for Mac OS X. This version fixes the error.
-    </p>
-    <h3>
-      <span class="mw-headline" id=".28PC.29_Fix_full-text_search_on_http_server">(PC) Fix full-text search on http_server</span>
-    </h3>
-    <p>
-      This was reported in <a href="https://github.com/gnosygnu/xowa/issues/151" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/151</a>
-    </p>
-    <h3>
-      <span class="mw-headline" id=".28PC.29_Add_customizable_footer">(PC) Add customizable footer</span>
-    </h3>
-    <p>
-      This was requested in order to more closely reproduce the look and feel of Wikipedia. The options can be set at <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.page.html" id="xolnki_16" title="Special:XowaCfg?grp=xowa.html.page">Special:XowaCfg?grp=xowa.html.page</a>
-    </p>
     <h3>
       <span class="mw-headline" id="Next_release">Next release</span>
     </h3>
     <p>
-      I've been slow in uploading wikis. For now, I'm continuing on the same path with Russian as well as the monthly English Wikipedia updates.
+      The schedule has still been slow recently. I've been looking at migrating XOWA to a Chrome / Node.js platform, since Mozilla / XULRunner is pretty much deprecated. As this will take several months, I think new releases will primarily be focused on fixing parsing issues as well as wiki releases.
     </p>
   
     </div>
