--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1377,7 +1377,7 @@
     </p>
     <ul>
       <li>
-        Doc: Change link from [[Help:Core/Category]] to [[App/Category]] {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_17" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+        Doc: Change link from [[Help:Core/Category]] to [[App/Category]] {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_17" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
       </li>
     </ul>
     <p>
@@ -1385,7 +1385,7 @@
     </p>
     <ul>
       <li>
-        Setup: Add logging to troubleshoot missing www.wikidata.org entry on [[Dashboard/Wiki_maintenance]] {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_18" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
+        Setup: Add logging to troubleshoot missing www.wikidata.org entry on [[Dashboard/Wiki_maintenance]] {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_18" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
       </li>
       <li>
         Source: Refactor regex classes.
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
