--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2018-01-01</b> 2017-12 English Wikipedia and 2017-12 German Wikipedia released<br/>
+  <ul>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2017-09-17</b> 2017-08 English Wikipedia, 2017-08 Polish wikis, 2017-08 Spanish wikis released<br/>
   <ul>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
@@ -127,66 +135,6 @@
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German wikis</a>
     </li>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis" class="external text" rel="nofollow">French wikis</a>
-    </li>
-  </ul>
-
-  <b>2017-04-26</b> 2017-04 English Wikipedia released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2017-03-28</b> 2017-03 English Wikipedia, 2017-03 Russian, 2017-03 Hindi, and 2017-03 Tibetan wikis released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Russian_wikis" class="external text" rel="nofollow">Russian wikis</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Hindi_wikis" class="external text" rel="nofollow">Hindi wikis</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Tibetan_wikis" class="external text" rel="nofollow">Tibetan wikis</a>
-    </li>
-  </ul>
-
-  <b>2017-03-06</b> 2017-02 German and French Wikipedia released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis" class="external text" rel="nofollow">French Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2017-02-21</b> 2017-02 English Wikipedia released. Also, 2017-02 Gujarati wikis<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_guwiki_latest" class="external text" rel="nofollow">Gujarati wikis</a>
-    </li>
-  </ul>
-
-  <b>2017-01-27</b> 2017-01 Chinese wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_zhwiki_latest" class="external text" rel="nofollow">Chinese Wikis</a>
-    </li>
-  </ul>
-
-  <b>2017-01-02</b> 2016-12 English Wikipedia released. Also, 2016-12 Italian and Swahili wikis<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_itwiki_latest" class="external text" rel="nofollow">Italian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_swwiki_latest" class="external text" rel="nofollow">Swahili wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-12-04</b> 2016-11 Dutch and Russian wikis released. Also, 2016-11 German Wikipedia <br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
     </li>
   </ul>
 
